--- a/jukebox.html
+++ b/jukebox.html
@@ -12,13 +12,15 @@
 	<section class="song-list">
 		{{#each songs}}
 			{{> song}}
+		{{else}}
+			No songs to play.
 		{{/each}}
 	</section>
 	<hr>
 	<form action="#" id="add-song-form">
 		<div class="form-group">
 			<label for="songurl">Song URL:</label>
-			<input type="url" id="songurl" name="songurl" class="form-control">
+			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html">
 		</div>
 		<input type="submit" class="btn btn-primary">
 	</form>
