Implement reactive selected state for song list; Implement proper async callback when adding song URL, effectively showing error message.

--- a/jukebox.html
+++ b/jukebox.html
@@ -36,7 +36,7 @@
 
 <template name="song">
 	<div class="song-row {{selected}}">
-		<span class="name">{{name}}</span>
+		<span class="song-name">{{name}}</span>
 		<i class="glyphicon glyphicon-remove remove-btn"></i>
 	</div>
 </template><!-- /song -->
