Fix the AppState collection not ready at Meteor.startup() (use cursor.observe())

--- a/jukebox.html
+++ b/jukebox.html
@@ -27,7 +27,7 @@
 	<form action="#" id="add-song-form">
 		<div class="form-group">
 			<label for="songurl">Song URL:</label>
-			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html">
+			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html" required>
 		</div>
 		<input type="submit" class="btn btn-primary">
 	</form>
