--- a/jukebox.html
+++ b/jukebox.html
@@ -36,7 +36,7 @@
 
 <template name="song">
 	<div class="song-row {{selected}}">
-		<span class="song-name">{{name}} - {{creator}}</span>
+		<span class="song-name">{{name}} - {{artist}}</span>
 		<i class="glyphicon glyphicon-remove remove-btn"></i>
 	</div>
 </template><!-- /song -->
