--- a/jukebox.html
+++ b/jukebox.html
@@ -29,7 +29,7 @@
 			<label for="songurl">Song URL:</label>
 			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html" required>
 		</div>
-		<input type="submit" class="btn btn-primary"> <span class="loading {{loading_hidden}}">Getting media link...</span>
+		<input type="submit" class="btn btn-primary"> <span class="loading {{loadingHidden}}">Getting media link...</span>
 	</form>
 
 </template><!-- /songlist -->
