--- a/jukebox.html
+++ b/jukebox.html
@@ -27,7 +27,7 @@
 	<form action="#" id="add-song-form">
 		<div class="form-group">
 			<label for="songurl">Song URL:</label>
-			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html" required>
+			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html (NCT, Zing)" required>
 		</div>
 		<input type="submit" class="btn btn-primary"> <span class="loading {{loadingHidden}}">Getting media link...</span>
 	</form>
@@ -36,7 +36,7 @@
 
 <template name="song">
 	<div class="song-row {{selected}}">
-		<span class="song-name">{{name}} - {{artist}}</span>
+		<span class="song-name"><mark class="origin-badge {{originBadgeColor}}">{{origin}}</mark>{{name}} - {{artist}}</span>
 		<i class="glyphicon glyphicon-remove remove-btn"></i>
 	</div>
 </template><!-- /song -->
