Turn off preload of audio element so that it won't start download new song when its src is changed

--- a/jukebox.html
+++ b/jukebox.html
@@ -11,7 +11,7 @@
 
 <template name="player">
 	<div class="player-panel">
-		<audio id="audio-player" src="song.mp3"></audio>
+		<audio id="audio-player" src="song.mp3" preload="none"></audio>
 	</div>
 </template><!-- /player -->
 
