--- a/jukebox.html
+++ b/jukebox.html
@@ -43,8 +43,8 @@
 
 <template name="song">
 	<div class="song-row {{selected}}">
+		<a class="origin-badge {{originBadgeColor}}" href="{{originalURL}}" target="_blank" title="Open original URL in new tab">{{origin}}</a>
 		<a class="song-item" title="{{name}} - {{artist}}" href="#{{name}}">
-			<mark class="origin-badge {{originBadgeColor}}">{{origin}}</mark>
 			<span class="song-name">{{name}} - {{artist}}</span>
 			<time class="add-date">{{addDate}}</time>
 		</a>
