only show result from 7 days past, not at all

--- a/jukebox.html
+++ b/jukebox.html
@@ -7,7 +7,7 @@
 		<h1>Nâu Jukebox</h1>
 		<label class="show-all-chk">
 			<input type="checkbox" id="show-all-chk">
-			Show all items
+			Past 7 days
 		</label>
 	</header>
 	<main class="main">
