--- a/jukebox.html
+++ b/jukebox.html
@@ -32,11 +32,16 @@
 	</section>
 	<hr>
 	<form action="#" id="add-song-form">
-		<div class="form-group">
-			<label for="songurl">Song URL:</label>
-			<input type="url" id="songurl" name="songurl" class="form-control" placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html (NCT, Zing)" required>
+		<label for="songurl">Song URL:</label>
+		<div class="input-group">
+			<input type="url" id="songurl" name="songurl" class="form-control" aria-label="..."
+				placeholder="http://www.nhaccuatui.com/bai-hat/song-name.code.html (NCT, Zing)" required />
+			<div class="input-group-btn">
+				<input type="submit" class="btn btn-primary">
+			</div>
 		</div>
-		<input type="submit" class="btn btn-primary"> <span class="loading {{loadingHidden}}">Getting media link...</span>
+
+		<span class="loading {{loadingHidden}}">Getting media link...</span>
 	</form>
 
 </template><!-- /songlist -->
