add feature of rebook a song

--- a/jukebox.html
+++ b/jukebox.html
@@ -53,7 +53,7 @@
 			<span class="song-name">{{name}} - {{artist}}</span>
 			<time class="add-date">{{addDate}}</time>
 		</a>
-		<i class="glyphicon glyphicon-remove remove-btn"></i>
+		<i class="glyphicon glyphicon-repeat rebook-btn"></i>
 	</div>
 </template><!-- /song -->
 
