Re-enable remove button; add button's tooltip for clarity

--- a/jukebox.html
+++ b/jukebox.html
@@ -54,7 +54,8 @@
 			<span class="song-name">{{name}} - {{artist}}</span>
 			<time class="add-date">{{addDate}}</time>
 		</a>
-		<i class="glyphicon glyphicon-repeat rebook-btn"></i>
+		<a class="glyphicon glyphicon-remove remove-btn" title="Remove this song"></a>
+		<a class="glyphicon glyphicon-repeat rebook-btn" title="Re-book this song"></a>
 	</div>
 </template><!-- /song -->
 
