filter songs by yesterday and past-7days

--- a/jukebox.html
+++ b/jukebox.html
@@ -42,16 +42,16 @@
 		<nav class="playlist-nav">
 			<div class="container">
 				<ul class="playlist-nav--list">
-					<li class="playlist-nav--item _active">
+					<li class="playlist-nav--item _active js-playlist-nav" data-tab="tab--play-list">
 						<a href="javascript:;">play list</a>
 					</li><!--
-					 --><li class="playlist-nav--item">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--yesterday">
 						<a href="javascript:;">yesterday</a>
 					</li><!--
-					 --><li class="playlist-nav--item">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--past-7-days">
 						<a href="javascript:;">past 7 days</a>
 					</li><!--
-					 --><li class="playlist-nav--item">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--naustorm">
 						<a href="javascript:;">naustorm</a>
 					</li>
 					<li class="playlist-nav--item playlist-nav--item__right">
