collect nickname of current user to analytic someday

--- a/jukebox.html
+++ b/jukebox.html
@@ -56,7 +56,8 @@
 						<a href="javascript:;">naustorm</a>
 					</li>
 					<li class="playlist-nav--item playlist-nav--item__right">
-						<input type="text" placeholder="@ enter your name" />
+						<input type="text" placeholder="@ enter your name" class="js-nickname-holder"
+							value="{{getNickname}}" />
 					</li>
 				</ul>
 			</div>
