- press up/down arrow key to select from instance search. - add hot shortcut keys: esc, q, enter, up/down arrow

--- a/jukebox.html
+++ b/jukebox.html
@@ -33,7 +33,7 @@
 						<div class="search-box--result-wrapper">
 							<ul class="song-result--list">
 								{{#each searchResult}}
-									<li class="song-result--item js-song-result--item"
+									<li class="song-result--item js-song-result--item {{_active}}"
 										data-href="{{originalURL}}">{{name}} - {{artist}}</li>
 								{{/each}}
 							</ul>
