Standardize favicon, use more lightweight version.

--- a/jukebox.html
+++ b/jukebox.html
@@ -1,6 +1,6 @@
 <head>
-	<title>NÂU-jukebox</title>
-	<link rel="shortcut icon" type="image/ico" href="/fav.ico"/>
+	<title>Nâu Jukebox</title>
+	<link rel="icon" href="/favicon.png" type="image/png">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 		<div class="container">
 			<ul class="navbar--list">
 				<li class="navbar--item navbar--item__icon">
-					<a href="">NÂU-jukebox</a>
+					<a href="https://naustud.io" target="_blank">Nâu Jukebox</a>
 				</li>
 				<li class="navbar--item navbar--item__input">
 
