--- a/jukebox.html
+++ b/jukebox.html
@@ -116,7 +116,7 @@
 			{{/if}}
 		</a>
 		<a href="javascript:;" class="playlist--item--link"
-			title="{{name}} - {{artist}}">{{getDisplayTitle 60}}</a>
+			title="{{name}} - {{artist}}">{{name}} - {{artist}}</a>
 		<div class="playlist--item--tools">
 			<small>{{addDate}}</small>
 			<a href="javascript:;" class="loading-block rebook-btn">
