Change the small play icon using html entity

--- a/jukebox.html
+++ b/jukebox.html
@@ -107,7 +107,7 @@
 
 <template name="song">
 	<li class="js-song-item playlist--item {{selected}} {{playing}}">
-		<span class="playlist--item--active">></span>
+		<span class="playlist--item--active">&rtri;</span>
 		<a href="{{originalURL}}" class="playlist--item--origin playlist--item--{{originBadgeColor}}" target="_blank">
 			{{#if thumbURL}}
 				<img src="{{thumbURL}}">
