restyle for naustorm element

--- a/jukebox.html
+++ b/jukebox.html
@@ -125,7 +125,7 @@
 			<div class="container">
 				<div class="naustorm-section">
 					<h5>>gamblr</h5>
-					<p>one more thing is comming !</p>
+					<p>some thing amz is comming !</p>
 				</div>
 			</div>
 		</section>
