fix error: cannot tab to naustorm for 5 first seconds

--- a/jukebox.html
+++ b/jukebox.html
@@ -81,19 +81,19 @@
 		<nav class="playlist-nav">
 			<div class="container">
 				<ul class="playlist-nav--list">
-					<li class="playlist-nav--item _active js-playlist-nav" data-tab="tab--play-list">
+					<li class="playlist-nav--item _active js-playlist-nav" data-tab="tab--play-list" data-target="js-playblock">
 						<a href="javascript:;">play list</a>
 					</li><!--
-					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--yesterday">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--yesterday" data-target="js-playblock">
 						<a href="javascript:;">yesterday</a>
 					</li><!--
-					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--past-7-days">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--past-7-days" data-target="js-playblock">
 						<a href="javascript:;">past 7 days</a>
 					</li><!--
-					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--naustorm">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--naustorm" data-target="js-naustorm">
 						<a href="javascript:;">naustorm</a>
 					</li><!--
-					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--gamblr">
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--gamblr" data-target="js-gamblr">
 						<a href="javascript:;">>gamblr</a>
 					</li>
 					<li class="playlist-nav--item playlist-nav--item__right">
