--- a/jukebox.html
+++ b/jukebox.html
@@ -36,6 +36,12 @@
 			data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
 	</a>
 
+	<div class="message-info _active">
+	  <p class="message-info--content">
+	    Your name is required !
+	  </p>
+	</div>
+
 	<nav class="navbar" id="js-navbar">
 		<div class="container">
 			<ul class="navbar--list">
@@ -164,7 +170,6 @@
 			<small>{{addDate}}</small>
 			<a href="javascript:;" class="loading-block rebook-btn">
 				<span class="loading-block--stable">rebook</span>
-				<span class="loading-block--spinner">...</span>
 			</a>
 			<a href="javascript:;" class="remove-btn">rmv</a>
 		</div>
