make user name is required field

--- a/jukebox.html
+++ b/jukebox.html
@@ -36,7 +36,7 @@
 			data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
 	</a>
 
-	<div class="message-info _active">
+	<div class="message-info js-message-info">
 	  <p class="message-info--content">
 	    Your name is required !
 	  </p>
@@ -84,7 +84,7 @@
 	</nav>
 
 	<div class="scroll-content">
-		<nav class="playlist-nav">
+		<nav class="playlist-nav js-playlist-section">
 			<div class="container">
 				<ul class="playlist-nav--list">
 					<li class="playlist-nav--item _active js-playlist-nav" data-tab="tab--play-list" data-target="js-playblock">
