dont allow form auto submit

--- a/jukebox.html
+++ b/jukebox.html
@@ -50,7 +50,7 @@
 				</li>
 				<li class="navbar--item navbar--item__input">
 
-					<form action="#" class="search-box js-add-song-form" id="js-add-song-form">
+					<form action="#" onsubmit="return false;" class="search-box js-add-song-form" id="js-add-song-form">
 						<div class="search-box--control">
 							<div class="search-box--input-wrapper">
 								<input type="text" id="songurl" name="songurl"
