--- a/jukebox.html
+++ b/jukebox.html
@@ -46,7 +46,7 @@
 		<div class="container">
 			<ul class="navbar--list">
 				<li class="navbar--item navbar--item__icon">
-					<a href="https://naustud.io" target="_blank"><strong>NAU STUDIO</strong></a>
+					<a href="#"><strong>NAU JUKEBOX</strong></a>
 				</li>
 				<li class="navbar--item navbar--item__input">
 
