fix nav bar color

--- a/jukebox.html
+++ b/jukebox.html
@@ -133,8 +133,8 @@
 		<section id="js-gamblr" class="main-content"  style="display:none">
 			<div class="container">
 				<div class="naustorm-section">
-					<h5>>gamblr</h5>
-					<p>some thing amz will comming !</p>
+					<h5>Gamblr</h5>
+					<p>This section is under construction. Some thing amazing is comming!</p>
 				</div>
 			</div>
 		</section>
@@ -184,7 +184,7 @@
 
 <template name="naustorm">
 	<div class="naustorm-section">
-		<h5>naustorm\<small> {{dateString}}</small></h5>
+		<h5>Naustorm Ranking |<small>{{dateString}}</small></h5>
 
 		<div class="row naustorm">
 			{{#each storms}}
@@ -195,7 +195,7 @@
 		</div>
 
 		<div class="group-author">
-			<h5>nauzoo\<small> got {{total}} storms this week.</small></h5>
+			<h5>Naustorm Bookers</h5>
 			<ul class="g-author--list">
 				{{#each groupByAuthorData}}
 					<li class="g-author--item">{{author}} -> {{books}} storms</li>
