--- a/jukebox.html
+++ b/jukebox.html
@@ -3,7 +3,9 @@
 	<link rel="icon" href="/favicon.png" type="image/png">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/trianglify/0.1.5/trianglify.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js">
+	</script>
+	<script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
 
 	<style>
 		::-webkit-input-placeholder {
