--- a/jukebox.html
+++ b/jukebox.html
@@ -36,13 +36,10 @@
 			data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
 	</a>
 
-	<div class="message-info js-message-info">
-	  <p class="message-info--content">
-	    Your name is required !
-	  </p>
-	</div>
-
 	<nav class="navbar" id="js-navbar">
+		<div class="loader">
+			<div class="dot js-dot"></div>
+		</div>
 		<div class="container">
 			<ul class="navbar--list">
 				<li class="navbar--item navbar--item__icon">
