style naucoin page

--- a/jukebox.html
+++ b/jukebox.html
@@ -98,6 +98,9 @@
 					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--naustorm" data-target="js-naustorm">
 						<a href="javascript:;">naustorm</a>
 					</li><!--
+					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--naucoin" data-target="js-naucoin">
+						<a href="javascript:;">₦aucoin</a>
+					</li><!--
 					 --><li class="playlist-nav--item js-playlist-nav" data-tab="tab--gamblr" data-target="js-gamblr">
 						<a href="javascript:;">>gamblr</a>
 					</li>
@@ -133,7 +136,74 @@
 			<div class="container">
 				<div class="naustorm-section">
 					<h5>>gamblr</h5>
-					<p>some thing amz will comming !</p>
+					<p>You want to change, make changes. Help us to make it real, plz !!!</p>
+				</div>
+			</div>
+		</section>
+
+		<section id="js-naucoin" class="main-content" style="display:none">
+			<div class="container">
+				<div class="naucoin-section">
+					<h5>₦aucoin\<small>₦1.00 = 1000VND</small></h5>
+
+					<div class="payment-block">
+						<div class="row">
+							<div class="columns four">
+								<label for="">select user</label>
+								<select name="" id="" class="u-full-width">
+									<option value="">mittosiro</option>
+									<option value="">Lầu xanh ở lầu đỏ</option>
+									<option value="">Hồ bơi nhỏ</option>
+									<option value="">Nguyễn Hải Phong</option>
+								</select>
+							</div>
+							<div class="columns three">
+								<label for="">amount of payment (+/-)</label>
+								<div class="input-coin u-full-width">
+									<input type="text" class="u-full-width"/>
+								</div>
+							</div>
+							<div class="columns three">
+								<label for="">&nbsp;</label>
+								<button class="button-naucoin">Submit</button>
+							</div>
+						</div>
+					</div>
+					<ul class="g-author--list g-author--list__naucoin">
+						<li class="g-author--item">mittosiro
+							<span class="g-author--ncoin">5.00</span>
+						</li>
+						<li class="g-author--item _active _admin">Lầu xanh ở lầu đỏ
+							<span class="g-author--ncoin">5.00</span>
+						</li>
+						<li class="g-author--item _active">Hồ bơi nhỏ
+							<span class="g-author--ncoin">12.50</span>
+						</li>
+						<li class="g-author--item">Nguyễn Hải Phong
+							<span class="g-author--ncoin">5.00</span>
+						</li>
+						<li class="g-author--item">xyz
+							<span class="g-author--ncoin">6.50</span>
+						</li>
+						<li class="g-author--item">mittosiro
+							<span class="g-author--ncoin">32.00</span>
+						</li>
+						<li class="g-author--item">Tờ Ú
+							<span class="g-author--ncoin">1.00</span>
+						</li>
+						<li class="g-author--item">ahihi
+							<span class="g-author--ncoin">11.00</span>
+						</li>
+						<li class="g-author--item">xyz
+							<span class="g-author--ncoin">4.00</span>
+						</li>
+						<li class="g-author--item">Haley Wu
+							<span class="g-author--ncoin">51.00</span>
+						</li>
+						<li class="g-author--item">Hai
+							<span class="g-author--ncoin">5.00</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</section>
